# SpirateGame

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Readme.md  SpirateWithLearning.cbp  board.cpp  board.h  cmake_install.cmake  enemy.cpp  enemy.h  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  spirate.cpp  spirate.h
